[package]
name = "rq"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "rq"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
regex = "1.0"
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["json", "native-tls"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto", "use_pem"] }
uuid = { version = "1.20.0", features = ["v4"] }
base64 = "0.22.1"
sha1 = "0.10"
pem = "3.0"
openssl = { version = "0.10", features = ["vendored"] }
chrono = "0.4.43"

[dev-dependencies]
libtest-mimic = "0.6"
wiremock = "0.5"
tokio = { version = "1", features = ["full", "macros"] }

[[test]]
name = "request_run"
harness = false

