[package]
name = "rq-lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "rq_lib"
path = "src/lib.rs"

[dependencies]
regex = "1"
lazy_static = "1.5"
reqwest = { version = "0.13", features = ["json", "native-tls", "form"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
jsonwebtoken = { version = "10", features = ["rust_crypto", "use_pem"] }
base64 = "0.22"
sha1 = "0.11"
pem = "3"
openssl = { version = "0.10", features = ["vendored"] }
