[package]
name = "rq-lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "rq_lib"
path = "src/lib.rs"

[features]
default = ["native"]
native = ["dep:reqwest", "dep:openssl", "dep:jsonwebtoken"]

[dependencies]
regex = "1"
lazy_static = "1.5"
reqwest = { version = "0.13", features = ["json", "native-tls", "form"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
jsonwebtoken = { version = "10", features = ["rust_crypto", "use_pem"], optional = true }
base64 = "0.22"
sha1 = "0.11"
pem = "3"
openssl = { version = "0.10", features = ["vendored"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1", features = ["js"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
